= GarrisonCommander helps you when choosing the right follower for the right mission =
* 1.1.7
Fix: Followers cache was not initialized
* 1.1.6
Fix: GarrisonCommander was unwilling triggering a mission reordering.
Fix: First mission list button was opening the wrong mission
Feature: Reduced memory footprint
Feature: You can switch between considering busy follower or not via a checkbox in main mission panel
Feature: Follower are now assigned to mission giving priority to highest level
Feature: GarrisonCommander is now load on demand when opening Garrison interface
* 1.1.5
Fix: Possible clash with another addon
Fix: Improved follower data refresh. Hopefully no more "You dont have enough followers.." on every button
* 1.1.4
Fixed: Was lagging when zoning inside Garrison
Fixed: Sometimes clicking on a mission button opened the wrong mission page
* 1.1.3
Fixed: When used for a long session of mission management, GarrisonCommander could starve with memory. Now it never go over 1M
Feature: Preview of 1.2.0 Chance of success is now permanently displayed on every mission. In this version it get updated ONLY when you hover on it
* 1.1.2
Fixed: Solves a rare case of library incompatibility causing error ...rfaceGarrisonCommander\GarrisonCommander-1.1.1.lua:47: attempt to call method 'capitalize' (a nil value)
Feature: Removed signature in tooltip... it was annoying me too.. :)
* 1.1.1
Fix for those who has MasterPlan installed. Master Plan was breaking GarrisonCommander, this patch fixes it
* 1.1.0
Feature: Level added to follower line
Feature: All counterd traits listed on the same line
Feature: For "In mission" follower time letf is shown instead of "In mission"
Feature: Trait related lines are now silver, while abilities related are Blue
Feature: Mission panel can now optionally be relocked
Feature: You can select to ignore "busy" followers
Feature: possible party and success chance with that party
* 1.0.0 First release